k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: shiroe34/devsvccloud:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
